--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
       "express": "^4.19.2",
       "extract-zip": "^2.0.1",
       "fb-tools": "0.0.1-security",
-      "fca-mahabub-004": "^1.0.0",
+      "fca-mahabub": "^1.0.0",
       "figlet": "^1.5.2",
       "form-data": "^4.0.0",
       "fs-extra": "^10.1.0",
