--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Mahabub",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "A simple Facebook Messenger Bot made by MR᭄﹅ MAHABUB﹅ メꪜ.",
   "main": "Mahabub.js",
   "engines": {
@@ -59,7 +59,7 @@
       "express": "^4.19.2",
       "extract-zip": "^2.0.1",
       "fb-tools": "0.0.1-security",
-      "mahabub-fca": "^0.0.3",
+      "fca-mahabub-004": "^1.0.0",
       "figlet": "^1.5.2",
       "form-data": "^4.0.0",
       "fs-extra": "^10.1.0",
